# lc3-training

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  go.sh  main.c  prog.lc3
src/: instructions.h  lc3vm.c  lc3vm.h  utils.c  utils.h
test/: instructions.c  program.c  unit_tests.c
